feat: Se arreglan bugs se limpia interfaz

--- a/src/components/atomos/Parabola.astro
+++ b/src/components/atomos/Parabola.astro
@@ -2,5 +2,5 @@
 const { class: className, classNameToBottom} = Astro.props;
 ---
 
-    <div id="scroll__prbla" class={`fixed size-80 lg:size-[700px] rounded-full shadow-2xl opacity-30 lg:opacity-60 z-0 blur-3xl ${className}`}></div>
-    <div id="scroll_prbla" class={`fixed size-80 lg:size-[700px] rounded-full shadow-2xl opacity-30 lg:opacity-60 z-0 blur-3xl ${classNameToBottom}`}></div>
+    <div id="scroll__prbla" class={`fixed size-52 sm:size-40 md:size-60 lg:size-80 xl:size-[600px] rounded-full shadow-2xl opacity-30 lg:opacity-60 z-0 blur-3xl ${className}`}></div>
+    <div id="scroll_prbla" class={`fixed size-52 sm:size-40 md:size-60 lg:size-80 xl:size-[600px] rounded-full shadow-2xl opacity-30 lg:opacity-60 z-0 blur-3xl ${classNameToBottom}`}></div>
