--- a/src/components/templates/Habilidades.astro
+++ b/src/components/templates/Habilidades.astro
@@ -8,7 +8,7 @@ const i18n = getI18N({ currentLocale });
 
 <div class="hero min-h-[70vh]">
 	<div class="hero-content p-0 text-center">
-		<div class="max-w-5xl pb-10 animate__animated animate__zoomIn">
+		<div class="max-w-5xl pb-10 animate__animated animate__zoomInUp">
 			<div class="bg-base-content bg-opacity-10  border border-base-content rounded-xl shadow-base-content py-5 px-5 card shadow__cardPulse">
 				<div class="bg-base-200 rounded-xl shadow-base-content py-5 card">
 					<div class="mx-auto max-w-7xl px-6 lg:px-8">
