--- a/src/components/organismos/Navbar.astro
+++ b/src/components/organismos/Navbar.astro
@@ -9,18 +9,15 @@ import ItemsNavrbarDrawer from '@/components/moleculas/ItemsNavrbarDrawer.astro'
 const { currentLocale } = Astro;
 ---
 
-<div
-  class="navbar backdrop-blur-[20px] backdrop-saturate-[180%] rounded-b-lg py-5 px-5 sticky-navbar z-10"
->
+<div class="navbar backdrop-blur-[20px] backdrop-saturate-[180%] rounded-b-lg py-5 px-5 sticky-navbar z-10">
   <div class="flex-grow">
     <div class="avatar flex items-center justify-center gap-4">
       <a class="w-12 rounded">
-        <ImageContrast client:load width="w-12"/>
+        <ImageContrast client:load width="w-12" />
       </a>
       <!-- <VersionSelect currentLocale={currentLocale} client:load /> -->
     </div>
   </div>
-
   <div class="flex-none">
     <ul class="menu menu-horizontal min-[547px]:flex hidden">
       <ItemsNavbar />
@@ -28,51 +25,28 @@ const { currentLocale } = Astro;
     <div class="list-none">
       <ThemeButton />
     </div>
-    <div class="pl-2">
+    <div class="md:w-0 sm:w-0 xl:w-8"></div>
+    <!-- <div class="pl-2">
       <LangPicker />
-    </div>
-    <label
-      for="my-drawer-4"
-      class="btn btn-ghost min-[547px]:hidden drawer-button"
-      aria-label="label"
-    >
-      <svg
-        width="20"
-        height="20"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        class="inline-block h-5 w-5 stroke-current"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M4 6h16M4 12h16m-7 6h7"></path>
+    </div> -->
+    <label for="my-drawer-4" class="btn btn-ghost min-[547px]:hidden drawer-button" aria-label="label">
+      <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block h-5 w-5 stroke-current">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
       </svg>
     </label>
   </div>
 </div>
-
 <div class="drawer drawer-end z-10">
   <input id="my-drawer-4" type="checkbox" class="drawer-toggle" />
   <div class="drawer-content"></div>
   <div class="drawer-side">
-    <label for="my-drawer-4" aria-label="close sidebar" class="drawer-overlay"
-    ></label>
-    <ul
-      class="menu flex justify-center items-center backdrop-blur-[30px] backdrop-saturate-[180%] min-h-screen w-full p-4 z-50 relative"
-    >
-      <label
-        for="my-drawer-4"
-        class="absolute top-3 right-14 text-4xl cursor-pointer z-50"
-        aria-label="Close"
-      >
-        &times;
-      </label>
-        <ul class="flex items-center flex-col w-full text-current">
-          <ItemsNavrbarDrawer />
-        </ul>
+    <label for="my-drawer-4" aria-label="close sidebar" class="drawer-overlay"></label>
+    <ul class="menu flex justify-center items-center bg-primary backdrop-blur-[100px] backdrop-brightness-200 min-h-screen w-full p-4 z-50 relative dark:text-white text-white">
+      <label for="my-drawer-4" class="absolute top-3 right-6 text-4xl cursor-pointer  z-50" aria-label="Close"> &times; </label>
+      <ul class="flex items-center flex-col w-full">
+        <ItemsNavrbarDrawer />
+      </ul>
+    </ul>
     </ul>
   </div>
 </div>
