feat: Se agrega la indexacion a google, se corrige lighthouse

--- a/src/components/templates/Footer.astro
+++ b/src/components/templates/Footer.astro
@@ -39,7 +39,13 @@ const i18n = getI18N({ currentLocale });
         </a>
       </div>
     </nav>
-    <span class="font-semibold text-1xl mt-4">{i18n.FOOTER.FOOTER_ECOLOGICAL_FOOTPRINT} <a type="button" class="btn bg-green-500 text-white btn-square btn-sm" target="_blank" aria-label="Huella ecologica de la pagina" href="https://www.websitecarbon.com/website/khelde-vercel-app-es-home/">A+</a>
+    <span class="font-semibold text-1xl mt-4">{i18n.FOOTER.FOOTER_ECOLOGICAL_FOOTPRINT} 
+      <a 
+      type="button" 
+      class="btn bg-green-900 text-white btn-square btn-sm" 
+      target="_blank" 
+      aria-label="Huella ecologica de la pagina" 
+      href="https://www.websitecarbon.com/website/khelde-vercel-app-es-home/">A+</a>
     </span>
     <div id="wcb" class="carbonbadge wcb-d"></div>
   </aside>
