--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ const title = slug ? slug.charAt(0).toUpperCase() + slug.slice(1) : '';
 // Constantes para URLs y títulos
 const baseUrl = 'https://khelde.vercel.app/';
 const siteTitle = 'Web developer JR - IT Engineer';
-const siteDescription = 'Portafolio de Erick Gonzalez';
+const siteDescription = 'Portafolio de Erick Gonzalez, desarrollador web junior con experiencia en frontend y backend. Mira mis proyectos y habilidades.';
 const imageUrl = `${baseUrl}kdl.webp`;
 ---
 
@@ -39,9 +39,12 @@ const imageUrl = `${baseUrl}kdl.webp`;
     <meta name="theme-color" content="#6f37cf" />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="muke78" />
-    <meta name="copyright" content="Copyright © 2024" />
+    <meta name="copyright" content="Copyright © 2025" />
     <link rel="icon" type="image/svg+xml" href="/kdl.webp" />
     <link rel="canonical" href={baseUrl} />
+
+    <!-- Sitemap -->
+    <link rel="sitemap" href="/sitemap-index.xml" />
     
     <!-- Fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
