feat: Cambios en SEO, hooks proyectos y animaciones

--- a/src/components/moleculas/ItemsNavbar.astro
+++ b/src/components/moleculas/ItemsNavbar.astro
@@ -18,7 +18,7 @@ if (currentLocale === 'es') {
 {
   dataChange.map((list) => (
     <li>
-      <a class="text-base" href={list.to} aria-label={`Ir a ${list.label}`}> {list.label} </a>
+      <a href={list.to} aria-label={`Ir a ${list.label}`}> {list.label} </a>
     </li>
   ))
 }
