--- a/src/components/templates/Proyectos.astro
+++ b/src/components/templates/Proyectos.astro
@@ -2,6 +2,7 @@
 import { getI18N } from '@/i18n';
 import Bubble from '@/components/atomos/Bubble.astro';
 import { TabsProyectos } from '../organismos/TabsProyectos';
+import {PruebaSwiper} from '@/components/moleculas/PruebaSwiper';
 
 
 const { currentLocale } = Astro;
@@ -9,12 +10,12 @@ const i18n = getI18N({ currentLocale });
 ---
 
 <div class="hero min-h-screen">
-  <div class="hero-content text-center">
-    <Bubble
+  <div class="hero-content p-0 text-center">
+    <!-- <Bubble
       class="lg:bottom-72 left-0 lg:left-28 bg-primary"
       classNameToBottom="top-80 right-0 lg:top-72 lg:right-24 bg-secondary"
-    />
-    <div class="max-w-7xl ">
+    /> -->
+    <div class="max-w-7xl pb-10">
       <div>
         <h2 class="text-5xl md:text-6xl lg:text-7xl font-bold mt-20 mb-20 animate__animated animate__zoomIn">
           {i18n.PROJECTS.PROJECTS_TITLE}
@@ -22,6 +23,7 @@ const i18n = getI18N({ currentLocale });
       </div>
       <div class="grid grid-cols-1 gap-6 animate__animated animate__zoomIn backdrop-blur-[100px] backdrop-saturate-[180%] rounded-lg">
          <TabsProyectos client:load currentLocale={currentLocale}/>
+        <!-- <PruebaSwiper client:load/> -->
       </div>
     </div>
   </div>
