--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,7 +50,7 @@ const imageUrl = `${baseUrl}kdl.webp`;
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
-  <body class="backdrop-blur-[100px] backdrop-saturate-[180%]">
+  <body>
     <div id="swup" class="transition-fade ">
       <slot />
     </div>
@@ -68,28 +68,9 @@ const imageUrl = `${baseUrl}kdl.webp`;
     top: 0;
     height: 3px;
   }
-
-  .shadow__cardPulse {
-    backdrop-filter: blur(200px) saturate(180%);
-    filter: drop-shadow(0 0 1rem);
-    transition: box-shadow 10s ease-in-out;
-  }
-
   .shadow__skew {
     animation: uppcolor 4s ease-in-out;
   }
-
-  /* Transición de fade */
-  .transition-fade {
-    transition: opacity 0.7s ease-in-out;
-    opacity: 1;
-  }
-
-  html.is-animating .transition-fade {
-    transition: opacity 0.7s ease-in-out;
-    opacity: 0;
-  }
-
   @keyframes uppcolor {
     0% {
       filter: blur(15rem);
