--- a/src/components/templates/Header.astro
+++ b/src/components/templates/Header.astro
@@ -6,7 +6,7 @@ const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
 
-<div class="hero min-h-[80vh] py-8">
+<div  class="hero min-h-[80vh] py-8">
   <div  class="hero-content text-center">
     <Parabola class="top-60 lg:left-[25rem] bg-gradient-to-t from-base-content via-secondary skew-x-[35deg] rotate-[2deg] shadow__skew" 
     classNameToBottom="top-60 lg:right-[25rem] bg-gradient-to-t from-base-content via-primary -skew-x-[35deg] rotate-[-2deg] shadow__skew" />
@@ -22,7 +22,7 @@ const i18n = getI18N({ currentLocale });
       type="button" 
       href="#habilidades" 
       aria-label="Ir a la sección de habilidades" 
-      class="btn btn-accent h-10 min-h-14 pl-6 pr-6 border-none ring-2 ring-offset-2 ring-offset-base-100 ring-accent"
+      class="btn btn-accent h-10 min-h-14 pl-6 pr-6 border-none ring-1 ring-offset-2 ring-offset-base-100 ring-base-200"
     >
         <svg 
             aria-hidden="true" 
