--- a/src/components/templates/Proyectos.astro
+++ b/src/components/templates/Proyectos.astro
@@ -11,10 +11,10 @@ const i18n = getI18N({ currentLocale });
 
 <div class="hero min-h-screen">
   <div class="hero-content p-0 text-center">
-    <!-- <Bubble
+    <Bubble
       class="lg:bottom-72 left-0 lg:left-28 bg-primary"
       classNameToBottom="top-80 right-0 lg:top-72 lg:right-24 bg-secondary"
-    /> -->
+    />
     <div class="max-w-7xl pb-10">
       <div>
         <h2 class="text-5xl md:text-6xl lg:text-7xl font-bold mt-20 mb-20 animate__animated animate__zoomIn">
