--- a/src/components/templates/Proyectos.astro
+++ b/src/components/templates/Proyectos.astro
@@ -1,8 +1,7 @@
 ---
 import { getI18N } from '@/i18n';
-import Bubble from '@/components/atomos/Bubble.astro';
-import { TabsProyectos } from '../organismos/TabsProyectos';
-import {PruebaSwiper} from '@/components/moleculas/PruebaSwiper';
+import Bubble from '@/components/atoms/Bubble.astro';
+import { TabsProyectos } from '@/components/organisms/TabsProyectos';
 
 
 const { currentLocale } = Astro;
