--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,7 +50,7 @@ const imageUrl = `${baseUrl}kdl.webp`;
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
-  <body class="backdrop-blur-[100px] backdrop-saturate-[180%]">
+  <body>
     <div id="swup" class="transition-fade ">
       <slot />
     </div>
