--- a/src/pages/es/about.astro
+++ b/src/pages/es/about.astro
@@ -1,13 +1,13 @@
 ---
 import Layout from '@/layouts/Layout.astro';
-import Navbar from '@/components/organisms/Navbar.astro';
 import Acerca from '@/components/templates/Acerca.astro';
 import Footer from '@/components/templates/Footer.astro';
+import { Nav } from '@/components/organisms/Nav';
 ---
 
 <Layout>
   <header class="relative w-full">
-    <Navbar />
+    <Nav client:load />
     <div>
       <Acerca />
     </div>
