--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,5 +1,5 @@
 ---
-import Navbar from "@/components/organisms/Navbar.astro"
+import {Nav} from "@/components/organisms/Nav";
 import { getI18N } from "@/i18n";
 import Layout from "@/layouts/Layout.astro"
 
@@ -8,7 +8,7 @@ const i18n = getI18N({ currentLocale });
 ---
 
 <Layout title="404">
-    <Navbar />
+    <Nav client:load />
     <div class="hero backdrop-blur-[100px] backdrop-saturate-[180%] min-h-screen">
       <div class="hero-content text-center">
         <div class="max-w-md">
