--- a/src/components/templates/Acerca.astro
+++ b/src/components/templates/Acerca.astro
@@ -15,18 +15,18 @@ const i18n = getI18N({ currentLocale });
     />
     <div class="max-w-7xl ">
       <div>
-        <h2 class="text-5xl md:text-6xl lg:text-7xl font-bold mt-20 mb-36 animate__animated animate__zoomIn">
+        <h2 class="text-5xl md:text-6xl lg:text-7xl font-bold mt-20 mb-36">
           {i18n.ABOUTME.ABOUT_TITLE}
         </h2>
       </div>
-
+      
       <div class="grid grid-cols-1 lg:grid-cols-4 lg:grid-rows-2 gap-4 sm:p-0 md:p-1 lg:p-4 animate__animated animate__zoomIn">
         <div class="lg:col-span-2 lg:row-span-3">
           <div class="avatar px-3">
             <div
               class="ring-primary ring-offset-base-100 w-72 md:w-80 lg:w-96 rounded-full ring ring-offset-4"
             >
-              <img src="/yop.webp" alt="muke78" loading="lazy" />
+              <img src="/yop.webp" alt="muke78" />
             </div>
           </div>
 
