feat: Se mejora idioma,accesibilidad,temas,empaquetado,confs

--- a/src/components/templates/Acerca.astro
+++ b/src/components/templates/Acerca.astro
@@ -20,8 +20,8 @@ const i18n = getI18N({ currentLocale });
         </h2>
       </div>
       
-      <div class="grid grid-cols-1 lg:grid-cols-4 lg:grid-rows-2 gap-4 sm:p-0 md:p-1 lg:p-4 animate__animated animate__zoomIn">
-        <div class="lg:col-span-2 lg:row-span-3">
+      <div class="grid grid-cols-1 lg:grid-cols-4 lg:grid-rows-2 gap-4 sm:p-0 md:p-1 lg:p-4">
+        <div class="lg:col-span-2 lg:row-span-3 animate__animated animate__zoomIn">
           <div class="avatar px-3">
             <div
               class="ring-primary ring-offset-base-100 w-72 md:w-80 lg:w-96 rounded-full ring ring-offset-4"
@@ -70,7 +70,7 @@ const i18n = getI18N({ currentLocale });
           </div>
         </div>
 
-        <div class="lg:col-span-2 lg:col-start-3">
+        <div class="lg:col-span-2 lg:col-start-3 animate__animated animate__fadeIn">
           <div
             class="rounded-lg py-5 card"
           >
@@ -82,7 +82,7 @@ const i18n = getI18N({ currentLocale });
           </div>
         </div>
 
-        <div class="lg:col-span-2 lg:col-start-3 lg:row-start-2">
+        <div class="lg:col-span-2 lg:col-start-3 lg:row-start-2 animate__animated animate__fadeIn">
           <div
             class="bg-transparent stats stats-horizontal rounded-lg py-5 w-full"
           >
