--- a/src/components/templates/Header.astro
+++ b/src/components/templates/Header.astro
@@ -22,7 +22,7 @@ const i18n = getI18N({ currentLocale });
       type="button" 
       href="#habilidades" 
       aria-label="Ir a la sección de habilidades" 
-      class="btn btn-accent h-10 min-h-14 pl-6 pr-6 border-none ring-1 ring-offset-2 ring-offset-base-100 ring-base-200"
+      class="btn btn-accent h-10 min-h-14 pl-6 pr-6 text-lg dark:text-white text-black"
     >
         <svg 
             aria-hidden="true" 
