feat: Se quitan textos

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,6 @@ const capitalizedTitle = capitalizeFirstLetter(titleLang);
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
     <title>{capitalizedTitle}</title>
     <meta name="description" content="Web developer JR - IT Engineer" />
     <!-- Open Graph Meta Tags (para Facebook, LinkedIn, y otras redes) -->
@@ -67,8 +66,9 @@ const capitalizedTitle = capitalizeFirstLetter(titleLang);
     <link rel="sitemap" href="/sitemap-index.xml" />
     <!-- Fuentes -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />undefined
-  </head>undefined<body>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  </head>
+  <body>
     <div id="swup" class="transition-fade ">
       <slot />
     </div>
