feat: Correcion de textos y btn ver CV

--- a/src/components/templates/Acerca.astro
+++ b/src/components/templates/Acerca.astro
@@ -110,7 +110,7 @@ const i18n = getI18N({ currentLocale });
           </div>
         </div>
 
-        <div class="lg:col-span-2 lg:col-start-3 lg:row-start-2 lg:mt-44">
+        <div class="lg:col-span-2 lg:col-start-3 lg:row-start-2 lg:mt-44 animate__animated animate__fadeIn">
           <a
           href="https://docs.google.com/viewer?url=https://khelde.vercel.app/CV_Erick_Miguel_Gonzalez_Rivera.pdf"
           target="_blank"
