--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -73,9 +73,10 @@ const capitalizedTitle = capitalizeFirstLetter(titleLang);
       <slot />
     </div>
     <script defer src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
-    <script src="../js/swup-init.js"></script>undefined
-  </body>undefined
-</html>undefined<style is:global>
+    <script src="../js/swup-init.js"></script>
+  </body>
+</html>
+<style is:global>
   .sticky-navbar {
     position: sticky;
     top: 0;
