--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -68,12 +68,18 @@ const capitalizedTitle = capitalizeFirstLetter(titleLang);
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
-  <body>
+  <body class="bg-base-300">
     <div id="swup" class="transition-fade ">
       <slot />
     </div>
     <script defer src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
     <script src="../js/swup-init.js"></script>
+    <script>
+      (function() {
+        const theme = localStorage.getItem("theme") || "nord";
+        document.documentElement.setAttribute("data-theme", theme);
+      })();
+    </script>
   </body>
 </html>
 <style is:global>
