--- a/src/pages/es/about.astro
+++ b/src/pages/es/about.astro
@@ -4,11 +4,12 @@ import Acerca from '@/components/templates/Acerca.astro';
 import Footer from '@/components/templates/Footer.astro';
 import { Nav } from '@/components/organisms/Nav';
 const {currentLocale} = Astro;
+const currentPath = Astro.url.pathname;
 ---
 
 <Layout>
   <header class="relative w-full">
-    <Nav client:load currentLocale={currentLocale}/>
+    <Nav client:load currentLocale={currentLocale} currentPath={currentPath}/>
     <div>
       <Acerca />
     </div>
