--- a/src/pages/fr/home.astro
+++ b/src/pages/fr/home.astro
@@ -5,11 +5,12 @@ import Habilidades from '@/components/templates/Habilidades.astro';
 import Footer from '@/components/templates/Footer.astro';
 import { Nav } from '@/components/organisms/Nav';
 const {currentLocale} = Astro;
+const currentPath = Astro.url.pathname;
 ---
 
 <Layout>
   <header class="relative w-full"> 
-    <Nav client:load currentLocale={currentLocale}/>
+    <Nav client:load currentLocale={currentLocale} currentPath={currentPath}/>
     <div id="header">
       <Header />
     </div>
