--- a/src/components/templates/Header.astro
+++ b/src/components/templates/Header.astro
@@ -1,84 +1,56 @@
 ---
 import { getI18N } from '@/i18n';
 import Parabola from '@/components/atoms/Parabola.astro';
+import Bubble from '../atoms/Bubble.astro';
 
 const { currentLocale } = Astro;
 const i18n = getI18N({ currentLocale });
 ---
-
-<div  class="hero min-h-[80vh] py-8">
-  <div  class="hero-content text-center">
-    <!-- <Parabola class="top-60 lg:left-[25rem] bg-gradient-to-t from-base-content via-secondary skew-x-[35deg] rotate-[2deg] shadow__skew" 
-    classNameToBottom="top-60 lg:right-[25rem] bg-gradient-to-t from-base-content via-primary -skew-x-[35deg] rotate-[-2deg] shadow__skew" /> -->
-    <div id="scrolling-element" class="max-w-md fixed">
-      <h1 class="text-6xl xl:text-8xl lg:text-8x1 md:text-8xl font-bold text-nowrap"> {i18n.HEADER.HEADER_TITLE} </h1>
-      <span class="text-7xl xl:text-8xl lg:text-8x1 md:text-8xl leading-snug font-bold bg-clip-text text-transparent bg-gradient-to-r from-primary to-accent"> 
-        {i18n.HEADER.HEADER_NAME} 
-      </span>
-      <p class="py-5 text-xl font-semibold text-base-content z-50">
-        {i18n.HEADER.HEADER_ABOUT}
-      </p>
-      <a 
-      type="button" 
-      href="#habilidades" 
-      aria-label="Ir a la sección de habilidades" 
-      class="btn btn-accent h-10 min-h-14 pl-6 pr-6 text-lg dark:text-white text-black"
-    >
-        <svg 
-            aria-hidden="true" 
-            xmlns="http://www.w3.org/2000/svg" 
-            width="16"  
-            height="16" 
-            viewBox="0 0 24 24" 
-            fill="currentColor" 
-            style="--sl-icon-size: 0.5em;">
-            <path 
-            fill="none" 
-            stroke="currentColor" 
-            stroke-linecap="round" 
-            stroke-linejoin="round" 
-            stroke-width="2" 
-            d="M8.12 9.29L12 13.17l3.88-3.88a.996.996 0 1 1 1.41 1.41l-4.59 4.59a.996.996 0 0 1-1.41 0L6.7 10.7a.996.996 0 0 1 0-1.41c.39-.38 1.03-.39 1.42 0" />
-          </svg> 
-          {i18n.HEADER.HEADER_BUTTON} 
-        </a>
-    </div>
+<div class="hero-content flex-col lg:flex-row-reverse">
+  <Bubble
+  class="top-40 lg:top-72 left-0 bg-primary"
+  classNameToBottom="bottom-80 right-36 bg-accent"
+/>
+  <div class="avatar">
+      <div class="ring-primary ring-offset-base-100 w-[250px] md:w-[450px] rounded-full ring-4 border-dashed ring-offset-8">
+          <img src="/yop.webp" alt="muke78" />
+      </div>
+  </div>
+  <div class="flex flex-col justify-evenly lg:p-14 md:p-8 p-4">
+      <span class="text-3xl font-light block text-center md:text-center lg:text-start">{i18n.HEADER.HEADER_SUBTITLE}</span>
+      <h1 class="text-6xl xl:text-8xl md:text-8xl font-bold text-nowrap text-center md:text-center lg:text-start"> {i18n.HEADER.HEADER_TITLE} </h1>
+      <span class="text-7xl xl:text-8xl md:text-8xl text-center md:text-center lg:text-start leading-snug font-bold bg-clip-text text-transparent bg-gradient-to-r from-primary to-accent"> {i18n.HEADER.HEADER_NAME} </span>
+      <p class="text-xl font-semibold text-base-content text-center md:text-center lg:text-start my-8"> {i18n.HEADER.HEADER_ABOUT} </p>
+      <!-- Botones -->
+      <div class="flex flex-col md:flex-row justify-center md:justify-around gap-2 mt-8">
+          <div class="w-full md:w-1/2">
+              <a href={`/${currentLocale}/projects`} class="btn btn-primary w-full">{i18n.HEADER.HEADER_BUTTON}</a>
+          </div>
+          <div class="w-full md:w-1/2">
+              <a href="https://docs.google.com/viewer?url=https://khelde.vercel.app/CV_Erick_Miguel_Gonzalez_Rivera.pdf" target="_blank" class="btn btn-primary btn-outline w-full" aria-label="Ver cv para saber mas acerca de mi"> {i18n.ABOUTME.ABOUT_DOWNLOAD_CV} </a>
+          </div>
+      </div>
+      <div class="flex justify-center md:justify-center lg:justify-start mt-4 gap-4">
+          <a href="https://github.com/muke78" target="_blank" aria-label="Saber mas acerca de mis repositorios y lo que he hecho">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="github" width="42" height="42" class="fill-current">
+                  <path d="M12,2.2467A10.00042,10.00042,0,0,0,8.83752,21.73419c.5.08752.6875-.21247.6875-.475,0-.23749-.01251-1.025-.01251-1.86249C7,19.85919,6.35,18.78423,6.15,18.22173A3.636,3.636,0,0,0,5.125,16.8092c-.35-.1875-.85-.65-.01251-.66248A2.00117,2.00117,0,0,1,6.65,17.17169a2.13742,2.13742,0,0,0,2.91248.825A2.10376,2.10376,0,0,1,10.2,16.65923c-2.225-.25-4.55-1.11254-4.55-4.9375a3.89187,3.89187,0,0,1,1.025-2.6875,3.59373,3.59373,0,0,1,.1-2.65s.83747-.26251,2.75,1.025a9.42747,9.42747,0,0,1,5,0c1.91248-1.3,2.75-1.025,2.75-1.025a3.59323,3.59323,0,0,1,.1,2.65,3.869,3.869,0,0,1,1.025,2.6875c0,3.83747-2.33752,4.6875-4.5625,4.9375a2.36814,2.36814,0,0,1,.675,1.85c0,1.33752-.01251,2.41248-.01251,2.75,0,.26251.1875.575.6875.475A10.0053,10.0053,0,0,0,12,2.2467Z"></path>
+              </svg>
+          </a>
+          <a href="https://www.linkedin.com/in/erick-miguel-gonz%C3%A1lez-rivera-96265b248/" target="_blank" aria-label="Saber mas acerca de experiencia">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="linkedin" width="42" height="42" class="fill-current">
+                  <path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"></path>
+              </svg>
+          </a>
+          <a href="https://wa.me/+527203966119" target="_blank" aria-label="Número de teléfono">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="whatsapp" width="42" height="42" class="fill-current">
+                  <path d="M19.05 4.91A9.82 9.82 0 0 0 12.04 2c-5.46 0-9.91 4.45-9.91 9.91c0 1.75.46 3.45 1.32 4.95L2.05 22l5.25-1.38c1.45.79 3.08 1.21 4.74 1.21c5.46 0 9.91-4.45 9.91-9.91c0-2.65-1.03-5.14-2.9-7.01m-7.01 15.24c-1.48 0-2.93-.4-4.2-1.15l-.3-.18l-3.12.82l.83-3.04l-.2-.31a8.26 8.26 0 0 1-1.26-4.38c0-4.54 3.7-8.24 8.24-8.24c2.2 0 4.27.86 5.82 2.42a8.18 8.18 0 0 1 2.41 5.83c.02 4.54-3.68 8.23-8.22 8.23m4.52-6.16c-.25-.12-1.47-.72-1.69-.81c-.23-.08-.39-.12-.56.12c-.17.25-.64.81-.78.97c-.14.17-.29.19-.54.06c-.25-.12-1.05-.39-1.99-1.23c-.74-.66-1.23-1.47-1.38-1.72c-.14-.25-.02-.38.11-.51c.11-.11.25-.29.37-.43s.17-.25.25-.41c.08-.17.04-.31-.02-.43s-.56-1.34-.76-1.84c-.2-.48-.41-.42-.56-.43h-.48c-.17 0-.43.06-.66.31c-.22.25-.86.85-.86 2.07s.89 2.4 1.01 2.56c.12.17 1.75 2.67 4.23 3.74c.59.26 1.05.41 1.41.52c.59.19 1.13.16 1.56.1c.48-.07 1.47-.6 1.67-1.18c.21-.58.21-1.07.14-1.18s-.22-.16-.47-.28" />
+              </svg>
+          </a>
+          <a href="mailto:erickm.gonzalez.rivera@gmail.com" target="_blank" aria-label="Correo electrónico">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="email" width="42" height="42" class="fill-current">
+                  <path fill="currentColor" d="M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-2.023 2.309-3.178 3.927-1.964L5.455 4.64L12 9.548l6.545-4.91l1.528-1.145C21.69 2.28 24 3.434 24 5.457" />
+              </svg>
+          </a>
+      </div>
   </div>
 </div>
-
-<style>
-  /* Animación basada en el scroll */
-  @keyframes scroll-effect {
-    0% {
-      opacity: 0.6;
-      transform: scale(1); 
-    }
-    100% {
-      opacity: 0; 
-      transform: scale(0.7); 
-    }
-  }
-
-  #scrolling-element {
-    animation: scroll-effect linear forwards;
-    animation-timeline: scroll(root); 
-    animation-range: 0vh 60vh;
-  }
-
-  /* Estilos adicionales */
-  #scrolling-element {
-    opacity: 0.6;
-    transition: opacity 0.1s ease-in-out, transform 0.5s ease-in-out;
-  }
-
-  #scroll__prbla {
-    animation: scroll-effect linear forwards;
-    animation-timeline: scroll(root); 
-    animation-range: 0vh 60vh;
-  }
-
-  #scroll__prbla {
-    opacity: 0.6;
-    transition: opacity 0.1s ease-in-out, transform 0.5s ease-in-out;
-  }
-</style>
