--- a/src/components/templates/Header.astro
+++ b/src/components/templates/Header.astro
@@ -21,12 +21,12 @@ const i18n = getI18N({ currentLocale });
       <span class="text-7xl xl:text-8xl md:text-8xl text-center md:text-center lg:text-start leading-snug font-bold bg-clip-text text-transparent bg-gradient-to-r from-primary to-accent"> {i18n.HEADER.HEADER_NAME} </span>
       <p class="text-xl font-semibold text-base-content text-center md:text-center lg:text-start my-8"> {i18n.HEADER.HEADER_ABOUT} </p>
       <!-- Botones -->
-      <div class="flex flex-col md:flex-row justify-center md:justify-around gap-2 mt-8">
+      <div class="flex flex-col md:flex-row justify-center md:justify-around gap-2 mt-2">
           <div class="w-full md:w-1/2">
-              <a href={`/${currentLocale}/projects`} class="btn btn-primary w-full">{i18n.HEADER.HEADER_BUTTON}</a>
+              <a href={`/${currentLocale}/projects`} class="btn btn-primary text-lg w-full">{i18n.HEADER.HEADER_BUTTON}</a>
           </div>
           <div class="w-full md:w-1/2">
-              <a href="https://docs.google.com/viewer?url=https://khelde.vercel.app/CV_Erick_Miguel_Gonzalez_Rivera.pdf" target="_blank" class="btn btn-primary btn-outline w-full" aria-label="Ver cv para saber mas acerca de mi"> {i18n.ABOUTME.ABOUT_DOWNLOAD_CV} </a>
+              <a href="https://docs.google.com/viewer?url=https://khelde.vercel.app/CV_Erick_Miguel_Gonzalez_Rivera.pdf" target="_blank" class="btn btn-primary btn-outline text-lg w-full" aria-label="Ver cv para saber mas acerca de mi"> {i18n.ABOUTME.ABOUT_DOWNLOAD_CV} </a>
           </div>
       </div>
       <div class="flex justify-center md:justify-center lg:justify-start mt-4 gap-4">
